add daily-tx-chart and price-chart to insight home

--- a/packages/insight/src/components/daily-transaction-chart/daily-transaction-chart.html
+++ b/packages/insight/src/components/daily-transaction-chart/daily-transaction-chart.html
@@ -8,5 +8,7 @@
    <div *ngIf="coinName === 'Ethereum'">
     {{ coinTransactionPerDay }} ethereum transactions confirmed over last 24 hours
   </div>
-  <canvas #lineCanvas></canvas>
+  <div class="chart-container">
+    <canvas #lineCanvas></canvas>
+  </div>
 </div>
