--- a/packages/insight/src/components/price-card/price-chart/price-chart.html
+++ b/packages/insight/src/components/price-card/price-chart/price-chart.html
@@ -2,5 +2,7 @@
   <div class="price">
     ${{ coinPrice }}
   </div>
-  <canvas #lineCanvas></canvas>
+  <div class="chart-container">
+      <canvas #lineCanvas></canvas>
+  </div>
 </div>
