--- a/packages/insight/src/components/daily-transaction-chart/daily-transaction-chart.html
+++ b/packages/insight/src/components/daily-transaction-chart/daily-transaction-chart.html
@@ -1,5 +1,5 @@
 <div>
-  <div *ngIf="coinName === 'Bitcoin'">
+  <!-- <div *ngIf="coinName === 'Bitcoin'">
     {{ coinTransactionPerDay }} bitcoin transactions confirmed over last 24 hours
   </div>
   <div *ngIf="coinName === 'Bitcoin Cash'">
@@ -7,7 +7,7 @@
   </div>  
    <div *ngIf="coinName === 'Ethereum'">
     {{ coinTransactionPerDay }} ethereum transactions confirmed over last 24 hours
-  </div>
+  </div> -->
   <div class="chart-container">
     <canvas #lineCanvas></canvas>
   </div>
