--- a/packages/insight/src/components/head-nav/head-nav.scss
+++ b/packages/insight/src/components/head-nav/head-nav.scss
@@ -45,7 +45,9 @@ head-nav {
           cursor: pointer;
           color: #fff;
           font-size: 2em;
-
+          font-style: italic;
+          font-weight: 800;
+          font-family: 'Ubuntu';
         }
       }
     }
