--- a/packages/insight/src/pages/home/home.scss
+++ b/packages/insight/src/pages/home/home.scss
@@ -39,13 +39,35 @@ page-home {
     .daily-tx-chart {
         background-color: white;
         border-radius: 8px;
-        padding: 10px;
+        padding: 32px 24px 24px 24px;
+
     }
 
     .price-chart {
         background-color: white;
         border-radius: 8px;
-        padding: 10px;
+        padding: 32px 24px 24px 24px;
+    }
+
+    .price-chart-header {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .price-chart-title {
+        display: flex;
+        flex: 1;
+        align-items: center;
+    }
+    
+    .price-chart-price {
+        display: flex;
+        margin-top: 44px;
+        margin-right: 6px;
+        font-weight: 500;
+        font-size: 20px;
+        opacity: 0.5;
     }
     
     .page-content-grid-desktop {
@@ -105,6 +127,7 @@ page-home {
         .daily-tx-chart {
             background-color: white;
             border-radius: 8px;
+            padding: 24px;
         }
     
         .price-chart {
