--- a/packages/insight/src/components/denomination/denomination.html
+++ b/packages/insight/src/components/denomination/denomination.html
@@ -6,7 +6,10 @@
 
     <ion-item *ngFor="let chainNetwork of availableNetworks">
       <ion-avatar item-start>
-        <img src="assets/img/currency_logos/{{ chainNetwork.chain.toLowerCase() }}.svg" class="logo" />
+        <img *ngIf="chainNetwork.network === 'mainnet'" src="assets/img/currency_logos/{{ chainNetwork.chain.toLowerCase() }}.svg" class="logo" />
+        <img *ngIf="chainNetwork.network !== 'mainnet' && chainNetwork.chain==='BTC'" src="assets/img/btcicon.svg" class="logo" />
+        <img *ngIf="chainNetwork.network !== 'mainnet' && chainNetwork.chain==='BCH'" src="assets/img/bchicon.svg" class="logo" />
+        <img [ngClass]="{'secondary': chainNetwork.network ==='testnet'}" *ngIf="chainNetwork.network !== 'mainnet' && chainNetwork.chain==='ETH'" src="assets/img/currency_logos/eth.svg" class="logo" />
       </ion-avatar>
       <ion-label color="dark" (click)="changeExplorer(chainNetwork)">
        {{ chainNetwork.chain }} <small class="pill"> {{ chainNetwork.network }}</small>
