--- a/packages/insight/src/pages/home/home.scss
+++ b/packages/insight/src/pages/home/home.scss
@@ -19,7 +19,7 @@ page-home {
     }
 
     .charts-container {
-        display: flex;
+        display: none;
         flex-direction: row;
         justify-content: space-between;
         flex-wrap: wrap;
@@ -88,7 +88,7 @@ page-home {
     @media (min-width: map-get($grid-breakpoints, md)) {
 
         .charts-container {
-            display: flex;
+            display: none;
             flex-direction: row;
             justify-content: space-evenly;
             flex-wrap: wrap;
@@ -119,7 +119,7 @@ page-home {
         }
 
         .charts-container {
-            display: flex;
+            display: none;
             flex-direction: column;
             align-items: center;
         }
