--- a/packages/insight/src/components/head-nav/head-nav.html
+++ b/packages/insight/src/components/head-nav/head-nav.html
@@ -17,9 +17,7 @@
           <ion-icon class="currency-icon" name="logo-bitcoin" *ngIf="(chainNetwork.chain === 'BTC' || chainNetwork.chain === 'BCH') && currencyProvider?.currencySymbol !== 'USD'"></ion-icon>
           <ion-icon class="currency-icon" name="logo-usd" *ngIf="currencyProvider?.currencySymbol === 'USD'"></ion-icon>
           <img  src="assets/img/ethicon.svg" *ngIf="chainNetwork.chain === 'ETH' && currencyProvider?.currencySymbol !== 'USD'" width="12">
-          &nbsp;
-          {{ currencyProvider?.currencySymbol }}
-          &nbsp;
+          <span class="currency-symbol">{{ currencyProvider?.currencySymbol }}</span>
            <small class="pill" *ngIf="currencyProvider?.currencySymbol === 'USD' && chainNetwork?.network === 'testnet';else networkOnly">{{ chainNetwork?.chain }} - {{ (chainNetwork?.network) }} </small>
           <ng-template #networkOnly><small class="pill" *ngIf="chainNetwork?.network === 'testnet'">{{ (chainNetwork?.network) }} </small></ng-template>
           &nbsp;
